--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,12 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Montserrat:700" rel="stylesheet">
+
+<style>
+  code {
+    padding: 0.2em 0.4em;
+    margin: 0;
+    font-size: 1.1rem;
+    font-family: monospace;
+    background-color: rgba(27,31,35,0.05);
+    border-radius: 3px;
+  }
+</style>
